--- a/DataGUITests/MainWindow.xaml
+++ b/DataGUITests/MainWindow.xaml
@@ -13,7 +13,29 @@
         <dataconverters:SongRankedConverter x:Key="SongRankedConverter"/>
         <dataconverters:SongRankedComparer x:Key="SongRankedComparer"/>
         <dataconverters:ScoreSaberDifficultiesCountConverter x:Key="ScoreSaberCount"/>
+        <Style TargetType="{x:Type DataGrid}">
+            <Setter Property="RowBackground" Value="AliceBlue"/>
+            <Setter Property="AlternatingRowBackground" Value="Azure"/>
+        </Style>
+        <Style TargetType="{x:Type DataGridRow}">
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="Pink"/>
+                </Trigger>
+                <!--<DataTrigger Binding="{Binding ScoreSaberDifficulties, Converter={StaticResource SongRankedConverter}}" Value="True">
+                    <Setter Property="Background" Value="LemonChiffon"/>
+                </DataTrigger>!-->
+                <DataTrigger Binding="{Binding Row.Ranked}" Value="True">
+                    <Setter Property="Background" Value="LemonChiffon"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Content.Text, Mode=OneWay, RelativeSource={RelativeSource Self}}" Value="0">
+                    <Setter Property="FontWeight" Value="Normal"/>
+                </DataTrigger>
+
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
+
     <Grid DataContext="{StaticResource SongViewSource}">
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
@@ -23,13 +45,13 @@
             <Style TargetType="DataGridCell" x:Name="SongNameCell" />
         </Grid.Resources>
         <DataGrid Grid.Row="1" x:Name="SongGrid" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="10,10,10,10" 
-                  ItemsSource="{ Binding }" AutoGenerateColumns="False" EnableRowVirtualization="True" IsReadOnly="True" >
+                  ItemsSource="{ Binding }" AutoGenerateColumns="False" EnableRowVirtualization="True" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="SongIdColumn" Header="SongId" Visibility="Hidden" Binding="{Binding SongId}"/>
                 <DataGridTextColumn x:Name="SongKeyColumn" Header="Key" Binding="{Binding Key}"/>
                 <DataGridTextColumn x:Name="RankedColumn" Header="Ranked" Binding="{Binding ScoreSaberDifficulties, Converter={StaticResource SongRankedConverter}}"/>
                 <DataGridTextColumn x:Name="ScoreSaberDiffsColumn" Header="ScoreSaberDiffs" Binding="{Binding ScoreSaberDifficulties, Converter={StaticResource ScoreSaberCount}}"/>
-                <DataGridTextColumn x:Name="NameColumn" Header="Name" Binding="{Binding Difficulties[0]}"/>
+                <DataGridTextColumn x:Name="NameColumn" Header="Name" Binding="{Binding SongName}"/>
                 <DataGridTextColumn x:Name="DescriptionColumn" Header="Description" Visibility="Hidden" Binding="{Binding Description}"/>
                 <DataGridTextColumn x:Name="HashColumn" Header="Hash" Binding="{Binding Hash}"/>
                 <DataGridTextColumn x:Name="UploadedColumn" Header="Uploaded" Binding="{Binding Uploaded}"/>
